--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,80 @@
+<!doctype html>
+<html lang="en">
+<!--
+WRITTEN BY: Emily Melgarejo
+EMAIL: melgare2@uci.edu
+-->
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="Emily Melgarejo">
+  <meta name="description" content="About page for Emily Melgarejo.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About | Emily Melgarejo</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
+<body>
+  <header>
+    <div class="container">
+      <h1>About</h1>
+      <nav aria-label="Main navigation">
+        <a href="index.html">Home</a>
+        <a href="aboutme.html" aria-current="page">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="card">
+      <h2>A little about me</h2>
+      <p>
+        I’m Emily, a second-year Informatics UCI student interested in building software that feels clear and easy to use.
+        I’m learning front-end basics (HTML/CSS) and improving my design thinking through class projects.
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Hobbies & Interests</h2>
+
+      <div class="two-columns">
+        <div>
+          <img src="images/photo.jpg" alt="A profile photo of Emily Melgarejo.">
+        </div>
+
+        <div>
+          <ul>
+            <li>Playing doubles tennis</li>
+            <li>Thrifting and finding unique pieces</li>
+            <li>PC gaming</li>
+            <li>Learning design and improving my UI skills</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="card">
+      <h2>Links</h2>
+      <p>
+        <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
+        |
+        <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Validation</h2>
+      <p>
+        <a href="https://validator.w3.org/check?uri=referer">W3C validator</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>© 2026 Emily Melgarejo</p>
+    </div>
+  </footer>
+</body>
+</html>
