--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,78 @@
+<!doctype html>
+<html lang="en">
+<!--
+WRITTEN BY: Emily Melgarejo
+EMAIL: melgare2@uci.edu
+-->
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="Emily Melgarejo">
+  <meta name="description" content="Projects page for Emily Melgarejo.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Emily Melgarejo | Projects</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <h1>Projects</h1>
+      <nav aria-label="Main navigation">
+        <a href="index.html">Home</a>
+        <a href="aboutme.html">About</a>
+        <a href="projects.html" aria-current="page">Projects</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="card">
+      <h2>Project 1: Connect Four (Python)</h2>
+      <p>
+        A Connect Four game project where I practiced programming logic and problem-solving.
+      </p>
+      <p>
+        Link:
+        <a href="https://en.wikipedia.org/wiki/Connect_Four" target="_blank" rel="noopener">
+          About Connect Four
+        </a>
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Project 2: Writing Project (Environmental Justice)</h2>
+      <p>
+        A research and writing project about an environmental issue and possible community-level solutions.
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Project 3: Pong (Python)</h2>
+      <p>
+        A Pong game built in Python where I practiced game logic, movement, and collision detection.
+      </p>
+      <p>
+        Links:
+        <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
+        |
+        <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Validation</h2>
+      <p>
+        <a href="https://validator.w3.org/check?uri=referer">W3C validator</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>© 2026 Emily Melgarejo</p>
+    </div>
+  </footer>
+</body>
+</html>
 
