--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@ EMAIL: melgare2@uci.edu
 
       <div class="two-columns">
         <div>
-          <img src="images/photo.jpg" alt="A profile photo of Emily Melgarejo.">
+          <img src="photo.jpg" alt="A profile photo of Emily Melgarejo.">
         </div>
 
         <div>
