--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ EMAIL: melgare2@uci.edu
         </div>
 
         <div>
-          <img src="images/photo.jpg" alt="A profile photo of Emily Melgarejo.">
+          <img src="photo.jpg" alt="A profile photo of Emily Melgarejo.">
         </div>
       </div>
     </section>
