--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ EMAIL: melgare2@uci.edu
   <meta name="description" content="Portfolio website for Emily Melgarejo.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Emily Melgarejo | Home</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
   <link rel="stylesheet" href="styles.css">
 </head>
 
