Add more description about myself

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,10 +29,11 @@ EMAIL: melgare2@uci.edu
 
   <main class="container">
     <section class="card">
-      <h2>A little about me</h2>
+      <h2>A Little About Me! 😸</h2>
       <p>
-        I’m Emily, a second-year Informatics UCI student interested in building software that feels clear and easy to use.
-        I’m learning front-end basics (HTML/CSS) and improving my design thinking through class projects.
+        I am a second-year at UC Irvine majoring in Informatics and minoring in Health Informatics. I’m comfortable working in fast-paced environments and staying organized under deadlines. 
+        In my classes, I have worked on team-based software projects where I helped create software requirements documents, user stories, and design documentation.
+        I’m especially interested in user experience and how design choices can make products feel more intuitive and supportive for real people.
       </p>
     </section>
 
@@ -41,15 +42,17 @@ EMAIL: melgare2@uci.edu
 
       <div class="two-columns">
         <div>
-          <img src="photo.jpg" alt="A profile photo of Emily Melgarejo.">
+          <img src="IMG_8298.jpg" alt="Emily holding a thumbs up.">
         </div>
 
         <div>
           <ul>
             <li>Playing doubles tennis</li>
             <li>Thrifting and finding unique pieces</li>
-            <li>PC gaming</li>
-            <li>Learning design and improving my UI skills</li>
+            <li>Competitive gaming</li>
+            <li>Sketching/Drawing</li>
+            <li>Taking care of my cat, Gohan!</li>
+            <li>Anime, Scientific Documentaries, Sitcoms</li>
           </ul>
         </div>
       </div>
