--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@ EMAIL: melgare2@uci.edu
       <p>
         <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
         |
-        <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+        <a href="resume.jpg" target="_blank" rel="noopener">Resume</a>
       </p>
     </section>
 
