--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ EMAIL: melgare2@uci.edu
             Links:
             <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
             |
-            <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+            <a href="resume.jpgf" target="_blank" rel="noopener">Resume</a>
           </p>
         </div>
 
