--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ EMAIL: melgare2@uci.edu
             Links:
             <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
             |
-            <a href="resume.jpgf" target="_blank" rel="noopener">Resume</a>
+            <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
           </p>
         </div>
 
@@ -54,10 +54,13 @@ EMAIL: melgare2@uci.edu
 
     <section class="card">
       <h2>Skills</h2>
-      <ul>
+      <ul class="skills-list">
         <li>Java</li>
         <li>Python</li>
         <li>Git/GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Figma</li>
       </ul>
     </section>
 
