--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@ EMAIL: melgare2@uci.edu
 
       <div class="two-columns">
         <div>
-          <img src="IMG_8298.jpg" alt="Emily holding a thumbs up.">
+          <img src="IMG_8298.jpg" alt="Emily holding a thumbs up." class="about-pic">
         </div>
 
         <div>
