--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@ EMAIL: melgare2@uci.edu
 
   <main class="container">
     <section class="card">
-      <h2>Welcome</h2>
+      <h2>Welcome!</h2>
 
       <div class="two-columns">
         <div>
           <p>
-            Hi! I’m Emily Melgarejo, I’m a second-year UCI Informatics student. I’m learning web development.
-            This site is a simple portfolio for INF 133.
+            Hello! My name is Emily Melgarejo. I am a second-year UCI Informatics student. This is my portfolio site!
+            On this site you can explore a little bit about myself, my LinkedIn, and my resume!
           </p>
 
           <p>
-            Links:
+            LinkedIn Link & Resume Download:
             <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
             |
             <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
@@ -47,7 +47,7 @@ EMAIL: melgare2@uci.edu
         </div>
 
         <div>
-          <img src="photo.jpg" alt="A profile photo of Emily Melgarejo.">
+          <img src="photo.jpg" alt="A headshot of Emily Melgarejo.">
         </div>
       </div>
     </section>
@@ -62,13 +62,6 @@ EMAIL: melgare2@uci.edu
         <li>CSS</li>
         <li>Figma</li>
       </ul>
-    </section>
-
-    <section class="card">
-      <h2>Validation</h2>
-      <p>
-        <a href="https://validator.w3.org/check?uri=referer">W3C validator</a>
-      </p>
     </section>
   </main>
 
