--- a/projects.html
+++ b/projects.html
@@ -42,9 +42,9 @@ EMAIL: melgare2@uci.edu
     </section>
 
     <section class="card">
-      <h2>Project 2: Writing Project (Environmental Justice)</h2>
+      <h2>Project 2: Portfolio Website</h2>
       <p>
-        A research and writing project about an environmental issue and possible community-level solutions.
+        A website all about Emily Melgarejo (me!) using HTML and CSS.
       </p>
     </section>
 
@@ -55,16 +55,7 @@ EMAIL: melgare2@uci.edu
       </p>
       <p>
         Links:
-        <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
-        |
-        <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
-      </p>
-    </section>
-
-    <section class="card">
-      <h2>Validation</h2>
-      <p>
-        <a href="https://validator.w3.org/check?uri=referer">W3C validator</a>
+            <a href="pong.py" target="_blank" rel="noopener">View pong.py</a>
       </p>
     </section>
   </main>
