--- a/contact.html
+++ b/contact.html
@@ -46,19 +46,12 @@ EMAIL: melgare2@uci.edu
     </section>
 
     <section class="card">
-      <h2>Other</h2>
+      <h2>Feel free to email me!</h2>
       <p>Email: <a href="mailto:melgare2@uci.edu">melgare2@uci.edu</a></p>
       <p>
         <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
         |
         <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
-      </p>
-    </section>
-
-    <section class="card">
-      <h2>Validation</h2>
-      <p>
-        <a href="https://validator.w3.org/check?uri=referer">W3C validator</a>
       </p>
     </section>
   </main>
