--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@ EMAIL: melgare2@uci.edu
         A Pong game built in Python where I practiced game logic, movement, and collision detection.
       </p>
       <p>
-        Links:
+        Link:
             <a href="pong.py" target="_blank" rel="noopener">View pong.py</a>
       </p>
     </section>
