expand project details

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,8 @@ EMAIL: melgare2@uci.edu
     <section class="card">
       <h2>Project 1: Connect Four (Python)</h2>
       <p>
-        A Connect Four game project where I practiced programming logic and problem-solving.
+        A Connect Four game project where I practiced programming logic and problem-solving. This was one of my first projects,
+        it was a playable Connect Four using the console on VSCode. 
       </p>
       <p>
         Link:
@@ -44,18 +45,20 @@ EMAIL: melgare2@uci.edu
     <section class="card">
       <h2>Project 2: Portfolio Website</h2>
       <p>
-        A website all about Emily Melgarejo (me!) using HTML and CSS.
+        A website all about Emily Melgarejo (me) using HTML and CSS. This is my first HTML and CSS project ever, and although it was done for the IN4MATX 133 assignment, 
+        it was very fun and I plan on experimenting a lot more.
       </p>
     </section>
 
     <section class="card">
       <h2>Project 3: Pong (Python)</h2>
       <p>
-        A Pong game built in Python where I practiced game logic, movement, and collision detection.
+        A Pong game built in Python where I practiced game logic, movement, and collision detection. This was done for a computer science class - in the game you are able to:
+        play, pause, lose, or if you don't lose challenge yourself to get a good high score!
       </p>
       <p>
-        Link:
-            <a href="pong.py" target="_blank" rel="noopener">View pong.py</a>
+        Photo of Pong Project:
+            <img src="pong.jpg" alt="Screenshots of Pong">
       </p>
     </section>
   </main>
