--- a/projects.html
+++ b/projects.html
@@ -56,10 +56,11 @@ EMAIL: melgare2@uci.edu
         A Pong game built in Python where I practiced game logic, movement, and collision detection. This was done for a computer science class - in the game you are able to:
         play, pause, lose, or if you don't lose challenge yourself to get a good high score!
       </p>
-      <p>
-        Photo of Pong Project:
-            <img src="pong.jpg" alt="Screenshots of Pong">
-      </p>
+      <h3>Pong Screenshots</h3>
+        <div class="gallery">
+          <img src="pong.jpg" alt="Pong game screenshot.">
+          <img src="pong1.jpg" alt="Pong game screenshot.">
+        </div>
     </section>
   </main>
 
