--- a/index.html
+++ b/index.html
@@ -37,13 +37,6 @@ EMAIL: melgare2@uci.edu
             Hello! My name is Emily Melgarejo. I am a second-year UCI Informatics student. This is my portfolio site!
             On this site you can explore a little bit about myself, my LinkedIn, and my resume!
           </p>
-
-          <p>
-            LinkedIn Link & Resume Download:
-            <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
-            |
-            <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
-          </p>
         </div>
 
         <div>
@@ -53,14 +46,13 @@ EMAIL: melgare2@uci.edu
     </section>
 
     <section class="card">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>Java</li>
-        <li>Python</li>
-        <li>Git/GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Figma</li>
+      <h2>Check me out!</h2>
+          <p>
+            LinkedIn Link & Resume Download:
+            <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
+            |
+            <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+          </p>
       </ul>
     </section>
   </main>
