--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@ EMAIL: melgare2@uci.edu
             <li>Thrifting and finding unique pieces</li>
             <li>Competitive gaming</li>
             <li>Sketching/Drawing</li>
-            <li>Taking care of my cat, Gohan!</li>
+            <li>Taking care of my cat - Gohan!</li>
             <li>Anime, Scientific Documentaries, Sitcoms</li>
           </ul>
         </div>
@@ -59,12 +59,16 @@ EMAIL: melgare2@uci.edu
     </section>
 
     <section class="card">
-      <h2>Links</h2>
-      <p>
-        <a href="https://www.linkedin.com/in/emily-melgarejo-898987325" target="_blank" rel="noopener">LinkedIn</a>
-        |
-        <a href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
-      </p>
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>Programming Languages: Java (Intermediate), Python (Intermediate), HTML (Beginner)</li>
+        <li>Communication</li>
+        <li>Git/GitHub</li>
+        <li>Figma</li>
+        <li>IDEs: Visual Studio Code, Pycharm, Eclipse</li>
+        <li>Leadership</li>
+        <li>Biliterate</li>
+      </ul>
     </section>
   </main>
 
