--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,8 @@ EMAIL: melgare2@uci.edu
     <section class="card">
       <h2>Skills</h2>
       <ul class="skills-list">
-        <li>Programming Languages: Java (Intermediate), Python (Intermediate), HTML (Beginner)</li>
+        <li>Programming Languages: Java (Intermediate), Python (Intermediate)</li>
+        <li>Web: HTML (Beginner), CSS</li>
         <li>Communication</li>
         <li>Git/GitHub</li>
         <li>Figma</li>
@@ -69,7 +70,6 @@ EMAIL: melgare2@uci.edu
         <li>Leadership</li>
         <li>Biliterate</li>
       </ul>
-    </section>
   </main>
 
   <footer>
