--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ EMAIL: melgare2@uci.edu
       <div class="two-columns">
         <div>
           <p>
-            Hello! My name is Emily Melgarejo. I am a second-year UCI Informatics student. This is my portfolio site!
-            On this site you can explore a little bit about myself, my LinkedIn, and my resume!
+            Hi! My name is Emily Melgarejo. Welcome to my portfolio.
+            I’m especially interested in user experience and designing things that feel simple and easy to use.
           </p>
         </div>
 
