--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ EMAIL: melgare2@uci.edu
       <div class="two-columns">
         <div>
           <p>
-            Hi! My name is Emily Melgarejo. Welcome to my portfolio.
-            I’m especially interested in user experience and designing things that feel simple and easy to use.
+            Hi! My name is Emily Melgarejo.
+            I love exploring new topics, trying out new tools, and learning by building small projects.
           </p>
         </div>
 
