--- a/aboutme.html
+++ b/aboutme.html
@@ -70,6 +70,7 @@ EMAIL: melgare2@uci.edu
         <li>Leadership</li>
         <li>Biliterate</li>
       </ul>
+    </section>
   </main>
 
   <footer>
